新增spm、文件信息上传、文件引用次数接口。验证应用图标、用户头像的存储路径。修改文件上传接口。菜单的action类型改为route。
