# api/oas/auth.yaml
@@ -425,6 +425,47 @@ paths:
                 type: boolean
         '401':
           $ref: '#/components/responses/UnauthorizedError'
+  /spm/create:
+    post:
+      description: create spm key.
+      tags:
+        - auth
+      operationId: createSpm
+      responses:
+        '200':
+          description: retrun the spm key
+          content:
+            application/json:
+              schema:
+                type: string
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+  /spm/auth:
+    post:
+      description: get auth data by spm.
+      tags:
+        - auth
+      operationId: getSpmAuth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                spm:
+                  type: string
+                  description: the spm key to get auth data
+              required:
+                - spm
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoginResponse'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
   /files:
     post:
       description: upload file
@@ -439,7 +480,7 @@ paths:
               properties:
                 bucket:
                   type: string
-                  description: the name of bucket
+                  description: the name of bucket，value is local
                 key:
                   type: string
                   description: the path of file in the bucket
@@ -451,6 +492,61 @@ paths:
               schema:
                 type: string
                 description: id of the file
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+  /files/report-ref-count:
+    post:
+      description: number of times that the file is referenced by business
+      tags:
+        - file
+      operationId: reportRefCount
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                inputs:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/FileRefInput'
+              required:
+                - inputs
+      responses:
+        '200':
+          description: report reference count success
+          content:
+            application/json:
+              schema:
+                type: boolean
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+  /files/upload-info:
+    post:
+      description: upload the file info for oss
+      tags:
+        - file
+      operationId: uploadFileInfo
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                file:
+                  $ref: '#/components/schemas/FileInput'
+                fileSource:
+                  $ref: '#/components/schemas/FileSourceInput'
+              required:
+                - file
+                - fileSource
+      responses:
+        '200':
+          description: upload file info success
+          content:
+            application/json:
+              schema:
+                type: string
         '401':
           $ref: '#/components/responses/UnauthorizedError'
   /files/{fileId}:
@@ -635,3 +731,48 @@ components:
         createdAt:
           type: string
           format: date-time
+    FileInput:
+      type: object
+      properties:
+        name:
+          type: string
+        path:
+          type: string
+        size:
+          type: integer
+        mine_type:
+          type: string
+      required:
+        - name
+        - path
+        - size
+        - mine_type
+    FileSourceInput:
+      type: object
+      properties:
+        kind:
+          type: string
+          enum: [ "local","alioss" ]
+        endpoint:
+          type: string
+        region:
+          type: string
+        bucket:
+          type: string
+      required:
+        - kind
+        - endpoint
+        - region
+        - bucket
+    FileRefInput:
+      type: object
+      properties:
+        fileId:
+          type: integer
+        opType:
+          type: string
+          description: plus or minus the reference count
+          enum: [ "plus","minus" ]
+      required:
+        - fileId
+        - opType
