# api/oas/server/file_impl.go
@@ -5,25 +5,52 @@ import (
 	"crypto/md5"
 	"encoding/hex"
 	"fmt"
+	"github.com/gin-gonic/gin"
+	"github.com/tsingsun/woocoo/pkg/log"
+	"github.com/woocoos/entco/ecx"
+	"github.com/woocoos/entco/pkg/snowflake"
+	"github.com/woocoos/knockout/api/oas"
+	"github.com/woocoos/knockout/ent"
+	"github.com/woocoos/knockout/ent/file"
+	"github.com/woocoos/knockout/ent/filesource"
 	"io"
 	"mime"
 	"os"
 	"path/filepath"
 	"strconv"
-
-	"github.com/gin-gonic/gin"
-	"github.com/tsingsun/woocoo/pkg/log"
-	"github.com/woocoos/entco/pkg/snowflake"
-	"github.com/woocoos/knockout/api/oas"
-	"github.com/woocoos/knockout/ent"
-	"github.com/woocoos/knockout/ent/file"
 )
 
 var _ oas.FileServer = (*FileService)(nil)
 
 type FileService struct {
-	BaseDir string
-	DB      *ent.Client
+	BaseDir  string
+	Endpoint string
+	DB       *ent.Client
+}
+
+func (f *FileService) UploadFileInfo(c *gin.Context, r *oas.UploadFileInfoRequest) (string, error) {
+	tid, err := f.tryGetTenantID(c)
+	if err != nil {
+		return "", err
+	}
+	fs := r.Body.FileSource
+	fsID, err := f.DB.FileSource.Query().Where(
+		filesource.KindEQ(filesource.Kind(fs.Kind)),
+		filesource.Endpoint(fs.Endpoint),
+		filesource.Bucket(fs.Bucket),
+		filesource.Region(fs.Region),
+	).Select(filesource.FieldID).Int(c)
+	if err != nil {
+		return "", fmt.Errorf("invalid filesource")
+	}
+	fileInput := r.Body.File
+	fi, err := f.DB.File.Create().SetTenantID(tid).SetName(fileInput.Name).SetSourceID(fsID).
+		SetPath(fileInput.Path).SetSize(fileInput.Size).SetMineType(fileInput.MineType).
+		Save(c)
+	if err != nil {
+		return "", err
+	}
+	return strconv.Itoa(fi.ID), nil
 }
 
 func (f *FileService) GetFileRaw(c *gin.Context, r *oas.GetFileRawRequest) ([]byte, error) {
@@ -42,7 +69,7 @@ func (f *FileService) GetFileRaw(c *gin.Context, r *oas.GetFileRawRequest) ([]by
 	}
 	c.Header("Content-Type", fi.MineType)
 
-	fn, err := f.getStorePath(c, tid, fi.Path)
+	fn, err := f.getStorePath(c, fi.Path)
 	if err != nil {
 		return nil, err
 	}
@@ -69,7 +96,7 @@ func (f *FileService) DeleteFile(c *gin.Context, r *oas.DeleteFileRequest) error
 	if err != nil {
 		return err
 	}
-	fn, err := f.getStorePath(c, tid, fi.Path)
+	fn, err := f.getStorePath(c, fi.Path)
 	if err != nil {
 		return err
 	}
@@ -114,6 +141,18 @@ func (f *FileService) UploadFile(c *gin.Context, r *oas.UploadFileRequest) (fid 
 	if tid, err = f.tryGetTenantID(c); err != nil {
 		return "", err
 	}
+	// 获取source
+	fs, err := f.DB.FileSource.Query().Where(
+		filesource.KindEQ(filesource.KindLocal),
+		filesource.Bucket(r.Body.Bucket),
+		filesource.Endpoint(f.Endpoint),
+	).Only(c)
+	if err != nil {
+		return "", err
+	}
+	if fs == nil {
+		return "", fmt.Errorf("invalid bucket:%s", r.Body.Bucket)
+	}
 
 	file, header, err := c.Request.FormFile("file")
 	if err != nil {
@@ -123,7 +162,7 @@ func (f *FileService) UploadFile(c *gin.Context, r *oas.UploadFileRequest) (fid 
 		return "", fmt.Errorf("file size is zero")
 	}
 
-	refname, err := f.getStorePath(c, tid, r.Body.Key)
+	refname, err := f.getStorePath(c, r.Body.Key)
 	if err != nil {
 		return "", err
 	}
@@ -167,7 +206,7 @@ func (f *FileService) UploadFile(c *gin.Context, r *oas.UploadFileRequest) (fid 
 	size = header.Size >> 10
 	id := snowflake.New().Int64()
 	mine := mime.TypeByExtension(filepath.Ext(header.Filename))
-	fi, err := f.DB.File.Create().SetID(int(id)).SetTenantID(tid).SetName(header.Filename).SetSourceID(0).
+	fi, err := f.DB.File.Create().SetID(int(id)).SetTenantID(tid).SetName(header.Filename).SetSourceID(fs.ID).
 		SetPath(r.Body.Key).SetSize(int(size)).SetMd5(md5Sum).SetMineType(mine).
 		Save(c)
 	if err != nil {
@@ -176,6 +215,39 @@ func (f *FileService) UploadFile(c *gin.Context, r *oas.UploadFileRequest) (fid 
 	return strconv.Itoa(fi.ID), nil
 }
 
-func (f *FileService) getStorePath(ctx context.Context, tid int, key string) (string, error) {
-	return filepath.Join(f.BaseDir, strconv.Itoa(tid), key), nil
+func (f *FileService) getStorePath(ctx context.Context, key string) (string, error) {
+	return filepath.Join(f.BaseDir, key), nil
+}
+
+func (f *FileService) ReportRefCount(ctx *gin.Context, r *oas.ReportRefCountRequest) (bool, error) {
+	tid, err := f.tryGetTenantID(ctx)
+	if err != nil {
+		return false, err
+	}
+	err = ecx.WithTx(ctx, func(ctx context.Context) (ecx.Transactor, error) {
+		return f.DB.Tx(ctx)
+	}, func(itx ecx.Transactor) error {
+		tx := itx.(*ent.Tx)
+		for _, v := range r.Inputs {
+			update := tx.File.UpdateOneID(v.FileId).Where(file.TenantID(tid))
+			if v.OpType == "plus" {
+				// 加
+				update.AddRefCount(1)
+			} else if v.OpType == "minus" {
+				// 减
+				update.AddRefCount(-1)
+			} else {
+				return fmt.Errorf("invalid opType")
+			}
+			err = update.Exec(ctx)
+			if err != nil {
+				return err
+			}
+		}
+		return nil
+	})
+	if err != nil {
+		return false, err
+	}
+	return true, nil
 }
