# api/oas/server/server.go
@@ -15,11 +15,13 @@ func RegisterAuthHandlers(router *gin.RouterGroup, si oas.AuthServer) {
 	router.POST("/mfa/bind", wrapBindMfa(si))
 	router.POST("/mfa/bind-prepare", wrapBindMfaPrepare(si))
 	router.GET("/captcha", wrapCaptcha(si))
+	router.POST("/spm/create", wrapCreateSpm(si))
 	router.POST("/forget-pwd/begin", wrapForgetPwdBegin(si))
 	router.POST("/forget-pwd/reset", wrapForgetPwdReset(si))
 	router.POST("/forget-pwd/send-email", wrapForgetPwdSendEmail(si))
 	router.POST("/forget-pwd/verify-email", wrapForgetPwdVerifyEmail(si))
 	router.POST("/forget-pwd/verify-mfa", wrapForgetPwdVerifyMfa(si))
+	router.POST("/spm/auth", wrapGetSpmAuth(si))
 	router.POST("/login/auth", wrapLogin(si))
 	router.POST("/logout", wrapLogout(si))
 	router.POST("/login/refresh-token", wrapRefreshToken(si))
@@ -33,7 +35,9 @@ func RegisterFileHandlers(router *gin.RouterGroup, si oas.FileServer) {
 	router.DELETE("/files/:fileId", wrapDeleteFile(si))
 	router.GET("/files/:fileId", wrapGetFile(si))
 	router.GET("/files/:fileId/raw", wrapGetFileRaw(si))
+	router.POST("/files/report-ref-count", wrapReportRefCount(si))
 	router.POST("/files", wrapUploadFile(si))
+	router.POST("/files/upload-info", wrapUploadFileInfo(si))
 }
 
 func wrapBindMfa(si oas.AuthServer) func(c *gin.Context) {
@@ -71,6 +75,17 @@ func wrapCaptcha(si oas.AuthServer) func(c *gin.Context) {
 			return
 		}
 		resp, err := si.Captcha(c, &req)
+		if err != nil {
+			c.Error(err)
+			return
+		}
+		handler.NegotiateResponse(c, http.StatusOK, resp, []string{"application/json"})
+	}
+}
+
+func wrapCreateSpm(si oas.AuthServer) func(c *gin.Context) {
+	return func(c *gin.Context) {
+		resp, err := si.CreateSpm(c)
 		if err != nil {
 			c.Error(err)
 			return
@@ -151,6 +166,22 @@ func wrapForgetPwdVerifyMfa(si oas.AuthServer) func(c *gin.Context) {
 			return
 		}
 		resp, err := si.ForgetPwdVerifyMfa(c, &req)
+		if err != nil {
+			c.Error(err)
+			return
+		}
+		handler.NegotiateResponse(c, http.StatusOK, resp, []string{"application/json"})
+	}
+}
+
+func wrapGetSpmAuth(si oas.AuthServer) func(c *gin.Context) {
+	return func(c *gin.Context) {
+		var req oas.GetSpmAuthRequest
+		if err := c.ShouldBind(&req); err != nil {
+			handler.AbortWithError(c, http.StatusBadRequest, err)
+			return
+		}
+		resp, err := si.GetSpmAuth(c, &req)
 		if err != nil {
 			c.Error(err)
 			return
@@ -296,6 +327,22 @@ func wrapGetFileRaw(si oas.FileServer) func(c *gin.Context) {
 	}
 }
 
+func wrapReportRefCount(si oas.FileServer) func(c *gin.Context) {
+	return func(c *gin.Context) {
+		var req oas.ReportRefCountRequest
+		if err := c.ShouldBind(&req); err != nil {
+			handler.AbortWithError(c, http.StatusBadRequest, err)
+			return
+		}
+		resp, err := si.ReportRefCount(c, &req)
+		if err != nil {
+			c.Error(err)
+			return
+		}
+		handler.NegotiateResponse(c, http.StatusOK, resp, []string{"application/json"})
+	}
+}
+
 func wrapUploadFile(si oas.FileServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		var req oas.UploadFileRequest
@@ -304,6 +351,22 @@ func wrapUploadFile(si oas.FileServer) func(c *gin.Context) {
 			return
 		}
 		resp, err := si.UploadFile(c, &req)
+		if err != nil {
+			c.Error(err)
+			return
+		}
+		handler.NegotiateResponse(c, http.StatusOK, resp, []string{"application/json"})
+	}
+}
+
+func wrapUploadFileInfo(si oas.FileServer) func(c *gin.Context) {
+	return func(c *gin.Context) {
+		var req oas.UploadFileInfoRequest
+		if err := c.ShouldBind(&req.Body); err != nil {
+			handler.AbortWithError(c, http.StatusBadRequest, err)
+			return
+		}
+		resp, err := si.UploadFileInfo(c, &req)
 		if err != nil {
 			c.Error(err)
 			return
